styles.css
/* root CSS */

* {
  padding: 0;
  margin: 0;
}

:root {
  --main-bg-colour: #111827;
  --secondary-bg-colour: #1f2937;
  --main-secondary-colour: #0f766e;
  --main-font-colour: rgb(197, 191, 191);
  --heading-font-colour: white;
  --header-height: 81px;
  --max-width: 1500px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: var(--header-height);
  width: 100%;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--main-bg-colour);
  width: 100%;
}

/* header CSS */

header {
  width: 100%;
  position: fixed;
  color: var(--heading-font-colour);
  z-index: 500;
  background-color: var(--secondary-bg-colour);
}

#navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
  color: var(--main-font-colour);
}

.hamburger {
  display: none;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: white;
}

.nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-item {
  margin-left: 3rem;
}

.primary-text {
  color: var(--main-font-colour);
  text-align: justify;
}

.nav-text {
  color: var(--heading-font-colour);
  font-size: 1.2rem;
  text-align: justify;
}

.heading-text {
  font-size: 3rem;
  color: var(--heading-font-colour);
}

#logo {
  font-size: 2rem;
}

.nav-text.active {
  color: var(--main-secondary-colour);
  border-bottom: 4px solid var(--main-secondary-colour);
}

/* main CSS */

main {
  max-width: var(--max-width);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-right: 2rem;
  padding-left: 2rem;
}

/* Home CSS */

#home,
#about-me {
  min-height: 100vh;
}

#home {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#home-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.home-header {
  color: var(--heading-font-colour);
  font-size: 3rem;
}

.large-vertical-gap {
  margin-bottom: 2rem;
}

.width {
  max-width: 650px;
  text-align: justify;
}

.secondary-text-colour {
  color: var(--main-secondary-colour);
}

.left-entry,
.right-entry,
.bottom-entry,
.skills-entry,
.about-me-entry {
  opacity: 0;
  transition: all 1s;
}

li {
  text-decoration: none;
  list-style-type: none;
}

.left-entry {
  transform: translateX(-20%);
}

.right-entry {
  transform: translateX(20%);
}

.bottom-entry {
  transform: translateY(100%);
}

.skills-entry {
  transform: translateX(50%);
}

.about-me-entry {
  transform: translateX(-50%);
}

#button-container {
  margin-top: 0.8em;
  transition-delay: 1000ms;
}

.show {
  opacity: 1;
  transform: translateX(0);
  transform: translateY(0);
}

a,
button {
  text-decoration: none;
}

#about-me-button {
  transition-delay: 0.3s;
}

.button {
  position: relative;
  background-color: var(--main-secondary-colour);
  border-radius: 5px;
  font-size: 1rem;
  color: white;
  padding: 0.8em 1.8em;
  cursor: pointer;
  user-select: none;
  text-align: center;
  text-decoration: none;
  border: none;
  cursor: pointer;
  transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s; /* Safari */
}

.button:after {
  content: "";
  display: block;
  position: absolute;
  border-radius: 5px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: all 0.5s;
  box-shadow: 0 0 10px 20px white;
}

.button:active:after {
  box-shadow: 0 0 0 0 white;
  position: absolute;
  border-radius: 5px;
  left: 0;
  top: 0;
  opacity: 1;
  transition: 0s;
}

.button:hover {
  border-color: transparent;
  transform: scale(1.2);
  transition: 0.3s;
}

/* about me CSS */

.skill-images {
  width: auto;
  height: 4rem;
  margin-bottom: 0.5em;
}

.mongo-image {
  width: 2rem;
}

.tailwind-image {
  width: 6rem;
}

.skill-text {
  color: white;
  font-size: 0.8rem;
}

.skill-container {
  width: 6rem;
  height: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 4px var(--main-secondary-colour) solid;
  padding: 1.5rem;
  border-radius: 10px;
}

ul {
  text-decoration: none;
  list-style-type: none;
}

#skills-list {
  display: grid;
  grid-template-columns: repeat(3, auto);
  gap: 1rem;
}

#skills-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#about-me {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.about-me-container {
  gap: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#about-me-text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--main-font-colour);
  width: 47%;
}

.me-picture {
  width: 60%;
  border-radius: 50%;
  margin-bottom: 1rem;
  border: 3px solid var(--main-secondary-colour);
}

.about-heading,
.projects-heading,
.contact-me-heading {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.about-heading {
  margin-bottom: 6rem;
}

.about-text-space {
  margin-bottom: 1em;
}

.skill-container:nth-child(1) {
  transition-delay: 1000ms;
}

.skill-container:nth-child(2) {
  transition-delay: 1200ms;
}

.skill-container:nth-child(3) {
  transition-delay: 1400ms;
}

.skill-container:nth-child(4) {
  transition-delay: 1800ms;
}

.skill-container:nth-child(5) {
  transition-delay: 2000ms;
}

.skill-container:nth-child(6) {
  transition-delay: 2200ms;
}

.skill-container:nth-child(7) {
  transition-delay: 2600ms;
}

.skill-container:nth-child(8) {
  transition-delay: 2800ms;
}

.skill-container:nth-child(9) {
  transition-delay: 3000ms;
}

.skill-container:nth-child(10) {
  transition-delay: 3400ms;
}

.skill-container:nth-child(11) {
  transition-delay: 3600ms;
}
/* ... */

